docs/1.19.2/m1.md
# Forge Dev Environment on Apple Silicon 

**This is only relevant if you have a computer with an Apple Silicon chip (MacOS & arm architecture). Before trying to follow this, do the normal [Environment Setup](environment-setup).**

These instructions are for Forge 1.19.x (for other versions see [1.16.5](/o16/m1), [1.17.1](/o17/m1), or [1.18.2](/o18/m1)).  

First make sure you are using a [MacOS JDK compiled natively for ARM chips](https://www.azul.com/downloads/?os=macos&architecture=arm-64-bit&package=jdk).  

> Note: if you use an x86 JDK, it should run fine with out this error but it will be much slower because Rosetta 2's emulation is cool but not magic. From my non-scientific test, the time to start the game went from just over a minuit to 19 seconds.

I think all this was fixed in a later version of 1.19 forge but just incase, i'll leave this here. 

## The Error

When you run minecraft from dev environment using a native ARM JDK, you will get this error:

    [LWJGL] Platform/architecture mismatch detected for module: org.lwjgl
      JVM platform:
        macOS aarch64 17.0.1
        OpenJDK 64-Bit Server VM v17.0.1+12-39 by Oracle Corporation
      Platform available on classpath:
        macos/x64
    --- 
    Exception in thread "Render thread" java.lang.RuntimeException: java.lang.reflect.InvocationTargetException
    ---
    Caused by: java.lang.reflect.InvocationTargetException
    ---
    Caused by: java.lang.NoClassDefFoundError: Could not initialize class com.mojang.blaze3d.systems.RenderSystem	

## How To Fix

Add the following line to the bottom of your build.gradle  
`apply from: "https://moddingtutorials.org/applesilicon.gradle"`

You must have a `gradle.properties` file (goes in the same directory as your build.gradle).
It must have the line `mc_version=1.19` (obviously it can have whatever other settings you need as well)

**Note:** the first time you run it, you may crash with the same error, just run it again

## Second Error

Once you've done that, you'll get a new error. 

```
java.lang.UnsatisfiedLinkError: 'void ca.weblite.objc.RuntimeUtils.init()'
	at ca.weblite.objc.RuntimeUtils.init(Native Method) ~[java-objc-bridge-1.0.0.jar%2380!/:5.10.0 (b0)] {}
	at ca.weblite.objc.RuntimeUtils.<clinit>(RuntimeUtils.java:71) ~[java-objc-bridge-1.0.0.jar%2380!/:5.10.0 (b0)] {}
	at ca.weblite.objc.Client.sendProxy(Client.java:369) ~[java-objc-bridge-1.0.0.jar%2380!/:5.10.0 (b0)] {}
	at com.mojang.blaze3d.platform.MacosUtil.loadIcon(MacosUtil.java:38) ~[forge-1.19-41.0.1_mapped_official_1.19-recomp.jar%2382!/:?] {re:classloading,pl:runtimedistcleaner:A}
	at net.minecraft.client.Minecraft.<init>(Minecraft.java:436) ~[forge-1.19-41.0.1_mapped_official_1.19-recomp.jar%2382!/:?] {re:classloading,pl:accesstransformer:B,pl:runtimedistcleaner:A}
	at net.minecraft.client.main.Main.main(Main.java:169) ~[forge-1.19-41.0.1_mapped_official_1.19-recomp.jar%2382!/:?] {re:classloading,pl:runtimedistcleaner:A}
	at jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method) ~[?:?] {}
```

## How To Fix Again


Add this mixin. It goes in the `client` section of your `mixins.json`. If you don't know how to add mixins, read [the mixins tutorial](mixins). 

    @Mixin(MacosUtil.class)
    public class M1FixCocoa {
        @Inject(at = @At("HEAD"), method = "loadIcon", cancellable = true)
        private static void loadIcon(InputStream intbuffer1, CallbackInfo ci) {
            if (isAppleSlilicon()) ci.cancel();
        }

        private static boolean isAppleSlilicon() {
            return System.getProperty("os.arch").equals("aarch64") && System.getProperty("os.name").equals("Mac OS X");
        }
    }

Note: I'm using the offical mappings, the mcp/yarn ones might call loadIcon something different.


## How It Works

### Wrong lwjgl Version

So the forge gradle plugin gets meta data about all the mc versions from `DownloadMCMeta#MANIFEST_URL = "https://launchermeta.mojang.com/mc/game/version_manifest.json"`

This has a list of all the versions: 

    {
          "id": "1.18.1",
          "type": "release",
          "url": "https://launchermeta.mojang.com/v1/packages/b0bdc637e4c4cbf0501500cbaad5a757b04848ed/1.18.1.json",
          "time": "2021-12-10T08:26:34+00:00",
          "releaseTime": "2021-12-10T08:23:00+00:00"
    },


  It fetches the json file from the url given for your version. 
  This is saved in `build/downloadMCMeta/version.json`. 
  It has a list of `libraries` that looks like: 
    
    {
          "downloads": {
            "artifact": {
              "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1.jar",
              "sha1": "7a0c583fcbec32b15784f846df536e1837d83666",
              "size": 38616,
              "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1.jar"
            },
            "classifiers": {
              "natives-linux": {
                "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-linux.jar",
                "sha1": "5536616b558cea2fea6330ca682fd7c733db9c43",
                "size": 156057,
                "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-linux.jar"
              },
              "natives-macos": {
                "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-macos.jar",
                "sha1": "439ab9d0264167a949cc7bcce673704322baaf50",
                "size": 117001,
                "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-macos.jar"
              },
              "natives-windows": {
                "path": "org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-windows.jar",
                "sha1": "3c869b3d7638c800b7039cd859d064658643ad6e",
                "size": 218136,
                "url": "https://libraries.minecraft.net/org/lwjgl/lwjgl-jemalloc/3.2.1/lwjgl-jemalloc-3.2.1-natives-windows.jar"
              }
            }
          },
          "name": "org.lwjgl:lwjgl-jemalloc:3.2.1",
        },

lwjgl is split into separate versions by operating system: natives-macos, natives-windows, and natives-linux.
Forge checks your operating system and chooses the right classifier.
It uses this classifier to generate a pom file that has all your dependencies.
The normal gradle/maven stuff is later used to fetch these dependencies (not the urls in the version.json).

By default Minecraft wants a version of LWJGL that does not distribute a version compiled for m1 processors.  

We can use `configurations.all { resolutionStrategy { force` in our build.gradle to make it use a more recent version.
However, it is still hardcoded to use the classifier for the x64 version (`natives-macos`), we must tell it to use the m1 version (`natives-macos-arm64`).  

This should be fixed in ForgeGradle but I did a hacky thing that works.  

Once it generates the pom file that describes the dependencies it wants, its cached at `~/.gradle/caches/forge_gradle/mcp_repo/net/minecraft/client/VERSION/client-VERSION.pom`. 
If it already exists ForgeGradle will not regenerate it and just get those libraries for you. 
We can edit it so that every part of lwjgl it gets will set the classifier to the m1 version . 
We read the pom file, replace all instances of "natives-macos" with "natives-macos-arm64" and rewrite the pom file.  

Now when we run MC it works!  


When we use `apply from` to add this code to the build.gradle, it runs before the downloadMCMeta task. 
So the first time it runs, our code won't find the pom file and so does nothing, then ForgeGradle will generate the pom file and mc will crash because it gets the wrong version. 
The next time it runs, our code will fix the pom file to use the m1 version, the ForgeGradle will skip generating the pom because it thinks its still cached from last time, then mc will run normally. 

### Cocoa unsatisfied link

cocoa is like MacOS's api thing. apple seems to have some vendetta against setting the icon for applications for some reason (1.16/1.17 also had problems with this). there seems to be just one method in `MacOsUtils` that wants to load an icon so we just mixin to it and get rid of the code that tries to initialized cocoa and somehow nothing else breaks